# presidio-anonymization

./: .gitignore  .gitmodules  README.md  build_windows.bat  en_core_web_lg.whl  pyproject.toml
requirments/: functional-requirments.md
src/anonymizer/: __init__.py  config.py  logger.py
src/anonymizer/core/: __init__.py  analyzer.py  anonymizer_service.py  mapping.py  models.py
src/anonymizer/handlers/: __init__.py  base.py  docx_handler.py  pdf_handler.py  txt_handler.py
src/anonymizer/ports/: __init__.py  cli.py  gui.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_docx_handler.py  test_mapping.py  test_models.py  test_pdf_handler.py  test_txt_handler.py
tests/fixtures/: sample.txt
